--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,4 +1,18 @@
+.home {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1500px;
+}
+
 .home__container {
+}
+
+.home__row {
+  display: flex;
+  z-index: 1;
+  margin: 0 5px;
 }
 
 .home__image {
